--- a/index.less
+++ b/index.less
@@ -3,11 +3,6 @@
 @keyword: #FBDE2D;
 @entity: #FF6400;
 
-.selected {
-	background-color: @text-color;
-	color: @background;
-}
-
 atom-text-editor, atom-text-editor .gutter {
 	background-color: @background;
 	color: @text-color;
@@ -17,8 +12,9 @@ atom-text-editor.is-focused .cursor {
 	border-color: rgba(255, 255, 255, 0.65);
 }
 
-atom-text-editor.is-focused .selection .region {
-	background-color: #253B76;
+.selection .region {
+	background-color: lighten(@background, 40%);
+	color: darken(@text-color, 30%)
 }
 
 .is-focused .line-number.cursor-line-no-selection,
