Markdown preview ; small fixes

--- a/index.less
+++ b/index.less
@@ -140,3 +140,10 @@ syntax--text.syntax--tex.syntax--latex .syntax--meta.syntax--function.syntax--en
 .syntax--bold {
 	font-weight: bold;
 }
+
+/**
+ * Markdown preview fixes
+ */
+.markdown-preview .syntax--plain {
+	color: rgb(51, 51, 51);
+}
