Upgrade theme with missing styles (git diff gutter, etc)

--- a/index.less
+++ b/index.less
@@ -4,6 +4,12 @@
 @entity: #FF6400;
 @comment: #AEAEAE;
 
+// For git diff info. i.e. in the gutter
+@syntax-color-renamed: #ff982d;
+@syntax-color-added: #2BDA77;
+@syntax-color-modified: #ff982d;
+@syntax-color-removed: #df0000;
+
 atom-text-editor, atom-text-editor .gutter {
 	background-color: @background;
 	color: @text-color;
