--- a/index.less
+++ b/index.less
@@ -10,6 +10,10 @@
 @syntax-color-modified: #ff982d;
 @syntax-color-removed: #df0000;
 
+* {
+  -webkit-font-smoothing: antialiased;
+}
+
 atom-text-editor, atom-text-editor .gutter {
 	background-color: @background;
 	color: @text-color;
